# rust-universal-terminal

./: Cargo.toml  README.md
src/: app.rs  formats.rs  highlight.rs  io_worker.rs  lib.rs  macros.rs  main.rs  persistence.rs  scheduler.rs  search.rs  triggers.rs
src/buffer/: line_assembler.rs  log_line.rs  log_store.rs  mod.rs
src/config/: mod.rs  presets.rs  theme.rs  window.rs
src/connection/: manager.rs  mod.rs  tcp.rs  uart.rs  udp.rs
src/ui/: center.rs  left_panel.rs  mod.rs  scheduler_panel.rs  search_bar.rs  send_bar.rs  statusbar.rs  strings.rs  terminal_view.rs  theme_colors.rs
tests/: formats_tests.rs  line_assembler_tests.rs  triggers_tests.rs
