[package]
name = "rust-terminal"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "rust_terminal"
path = "src/lib.rs"

[[bin]]
name = "rust-terminal"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }

serialport = "4.6"
crossbeam-channel = "0.5"
parking_lot = "0.12"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

directories = "5"
rfd = "0.15"
hex = "0.4"
regex = "1"
bytes = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
